gcc/testsuite/gcc.dg/gomp/block-4.c
// { dg-do compile }

void foo()
{
  #pragma omp critical
    {
      return; // { dg-error "invalid branch to/from OpenMP structured block" }
    }
}
